[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dl-easy"
version = "0.1.1"
description = "A simple YouTube video downloader"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Pratim Bhosale", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp",
    "tqdm",
]

[project.scripts]
yt-dl = "youtube_downloader_pkg.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/youtube_downloader"
"Bug Tracker" = "https://github.com/yourusername/youtube_downloader/issues"
